# container-security-101

./: .dockerignore  .gitmodules  Dockerfile  README.md  container-security-101.yml  entrypoint.sh  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  commit.yml  update.yml
ansible/roles/cli-tools/tasks/: main.yml
