[bumpversion]
current_version = 2024.02.02
parse = (?P<year>2[0-1]\d{2})\.(?P<month>(0\d|1[0-2]))(.(?P<increment>\d{2}))?
serialize = {year}.{month}.{increment}
commit = True
tag = True

[metadata]
author = "Jon Zeolla"
description = "Setup Jon Zeolla's Container Security 101 lab"
description-file = "README.md"
versioning = "CalVer"
license_file = "LICENSE"
name = "container-security-101"
url = "https://github.com/JonZeolla/container-security-101"

[bumpversion:file:VERSION]
